--- a/Pickle/Pickle-release-info.plist
+++ b/Pickle/Pickle-release-info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Supports Live Activities</key>
+	<string>YES</string>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
 		<string>com.ddudios.realpizza.refresh_badge</string>
