--- a/Pickle/Pickle.xcodeproj/xcshareddata/xcschemes/Pickle.xcscheme
+++ b/Pickle/Pickle.xcodeproj/xcshareddata/xcschemes/Pickle.xcscheme
@@ -4,7 +4,8 @@
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "YES"
+      buildArchitectures = "Automatic">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -34,9 +35,20 @@
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "965C9B9E2ADAB2380015ABBE"
-               BuildableName = "PickleTests.xctest"
-               BlueprintName = "PickleTests"
+               BlueprintIdentifier = "96AA8C8F2BEE747C0075CFE8"
+               BuildableName = "CommonTests.xctest"
+               BlueprintName = "CommonTests"
+               ReferencedContainer = "container:Pickle.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "96AA8CB22BEE74FA0075CFE8"
+               BuildableName = "PickleCommonTests.xctest"
+               BlueprintName = "PickleCommonTests"
                ReferencedContainer = "container:Pickle.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -64,7 +76,7 @@
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -84,7 +96,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
