Update from project to workspace
Module 추가 에 따라 project 가 아닌 workspace 로 빌드

--- a/.github/workflows/test_dev.yml
+++ b/.github/workflows/test_dev.yml
@@ -52,7 +52,7 @@ jobs:
       if: github.event_name == 'pull_request'
       run: | 
         xcodebuild test \
-        -project Pickle/Pickle.xcodeproj \
+        -workspace PickleApp.xcworkspace \
         -scheme Pickle \
         -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.0.1'
         
