--- a/.github/workflows/test_dev.yml
+++ b/.github/workflows/test_dev.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Start Test 🛠
       if: github.event_name == 'pull_request'
       run: | 
-        xcodebuild clean test \
+        xcodebuild test \
         -workspace PickleApp.xcworkspace \
         -scheme Pickle \
         -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.0.1'
