--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -1,5 +1,8 @@
 name: Release TestFlight WorkFlow
 
+env:
+  PROJECT: 'PickleApp'
+  
 on:
  push:
     branches: [ "release/*" ]
@@ -9,11 +12,14 @@ on:
 jobs:
   deploy:
     name: build & test & TestFilght Upload 
-    runs-on: macos-13
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        xcode: ["15.3.0"]
 
     env:
       # app archive 및 export 에 쓰일 환경 변수 설정
-     XC_WORKSPACE: ${{ 'Pickle/Pickle.xcodeproj' }}
+     XC_WORKSPACE: ${{ ${{env.PROJECT}}'.xcworkspace' }}
      XC_SCHEME: ${{ 'Pickle-release' }}
      XC_ARCHIVE: ${{ 'Pickle-release.xcarchive' }}
       
@@ -44,10 +50,10 @@ jobs:
         # shell 이용해서 하나의 command 수행
         uses: maxim-lobanov/setup-xcode@v1
         with: 
-          xcode-version: '15.0.1'
+          xcode-version: ${{ matrix.xcode }}
           
       - name: Select latest Xcode
-        run: "sudo xcode-select -s /Applications/Xcode_15.0.app"
+        run: "sudo xcode-select -s /Applications/Xcode.app"
         
       - name: Checkout project
         # uses 키워드를 통해 Github Actions에서 기본으로 제공하는 액션을 사용 가능. 아래 액션은 repository 에 체크아웃하는 것
