--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -1,8 +1,5 @@
 name: Release TestFlight WorkFlow
 
-PRO:
-  PROJECT: 'PickleApp'
-  
 on:
  push:
     branches: [ "release/*" ]
@@ -19,7 +16,7 @@ jobs:
 
     env:
       # app archive 및 export 에 쓰일 환경 변수 설정
-     XC_WORKSPACE: ${{ PRO.PROJECT }}.xcworkspace
+     XC_WORKSPACE: 'PickleApp.xcworkspace'
      XC_SCHEME: ${{ 'Pickle-release' }}
      XC_ARCHIVE: ${{ 'Pickle-release.xcarchive' }}
       
