--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -29,6 +29,9 @@ jobs:
      ENCRYPTED_PROVISION_FILE_PATH: ${{ '.github/workflows/secrets/release_realDoPizza1_1_0.mobileprovision.gpg' }}
      DECRYPTED_PROVISION_FILE_PATH: ${{ '.github/workflows/secrets/release_realDoPizza1_1_0.mobileprovision' }}
      PROVISIONING_ENCRYPTION_KEY: ${{ secrets.PROVISION_ENCRYTION_PASSWORD }} # gpg로 파일 암호화할 때 사용한 암호
+     
+     ENCRYPTED_LIVE_ACTIVITY_PROVISION_FILE_PATH: ${{ '.github/workflows/secrets/LiveActivity_provisioning_1_1_0.mobileprovision.gpg' }}
+     DECRYPTED_LIVE_ACTIVITY_PROVISION_FILE_PATH: ${{ '.github/workflows/secrets/LiveActivity_provisioning_1_1_0.mobileprovision' }}
 
      # AppStore privateKey Path
      ENCRYPTED_APPSTORE_PRIVATE_KEY_PATH: ${{ '.github/workflows/secrets/AuthKey_2YZNHX4282.p8.gpg' }}
@@ -69,6 +72,8 @@ jobs:
           gpg -d -o "$DECRYPTED_CERT_FILE_PATH" --pinentry-mode=loopback --passphrase "$CERT_ENCRYPTION_KEY" "$ENCRYPTED_CERT_FILE_PATH"
           # provisioning 복호화
           gpg -d -o "$DECRYPTED_PROVISION_FILE_PATH" --pinentry-mode=loopback --passphrase "$PROVISIONING_ENCRYPTION_KEY" "$ENCRYPTED_PROVISION_FILE_PATH"
+
+          gpg -d -o "$DECRYPTED_LIVE_ACTIVITY_PROVISION_FILE_PATH" --pinentry-mode=loopback --passphrase "$PROVISIONING_ENCRYPTION_KEY" "$ENCRYPTED_LIVE_ACTIVITY_PROVISION_FILE_PATH"
           
           # security를 사용하여 인증서와 개인 키를 새로 만든 키 체인으로 가져옴
           security import "$DECRYPTED_CERT_FILE_PATH" -k "$KEYCHAIN" -P "$CERT_EXPORT_KEY" -A
